other files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: frontend-svc
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: backend-svc
            port:
              number: 3000
        path: /api
        pathType: Prefix
status:
  loadBalancer: {}
